some items still need addressing like email, and clustering.

--- a/docker/dockerfile.env
+++ b/docker/dockerfile.env
@@ -2,7 +2,7 @@
 NODE_ENV=production
 
 # Site URL (used for emails)
-SITE_URL=http://127.0.0.1
+SITE_URL=http://ui
 
 #########
 # PORTS #
@@ -22,7 +22,7 @@ API_HOST=api
 
 # Unique string used for hashing
 # Recommended length, 256 bits
-APP_SECRET=
+APP_SECRET=5b3105b8037567e1f8f8b3872bde1ade0ba46b6e939c3bcbff1c860abacf92d3
 
 #############
 # DATABASES #
@@ -123,10 +123,10 @@ GOOGLE_ENABLED=false
 ########
 
 # SMTP credentials
-#SMTP_HOST=127.0.0.1
-#SMTP_USER=user
-#SMTP_PASS=password
-#SMTP_PORT=587
+#SMTP_HOST=
+#SMTP_USER=
+#SMTP_PASS=
+#SMTP_PORT=25
 #SMTP_SECURED=false
 #SMTP_IGNORE_TLS=false
 #SMTP_REQUIRE_TLS=false
