--- a/docker/xapi.env
+++ b/docker/xapi.env
@@ -5,7 +5,7 @@
 # Data storage method
 # (Memory typically for development and testing only)
 # (mongo*|memory)
-#MODELS_REPO=mongo
+MODELS_REPO=mongo
 
 # Mongo connection string (e.g. mongodb://localhost:27017/xapiservice)
 MONGO_URL=mongodb://db:27017/learninglocker_v2
@@ -22,7 +22,7 @@ REDIS_URL=redis://redis:6379/0
 # Express (API) #
 #################
 EXPRESS_PORT=8081
-
+EXPRESS_HOST=xapi
 ###########
 # Storage #
 ###########
